# rfidlib

./: .gitignore  README.md  build.gradle.kts  proxmark_commands.md  settings.gradle.kts
rust/: AGENTS.md  Cargo.toml
rust/gallagher-rfid-acr122u/: Cargo.toml
rust/gallagher-rfid-acr122u/src/: error.rs  lib.rs  smart_card.rs  smart_card_context.rs  smart_card_reader.rs
rust/gallagher-rfid-cli/: Cargo.toml
rust/gallagher-rfid-cli/src/: desfire_integration.rs  formatter.rs  main.rs
rust/gallagher-rfid-core/: Cargo.toml
rust/gallagher-rfid-core/src/: error.rs  lib.rs  mifare_classic.rs  mifare_classic_error.rs  transport.rs
rust/gallagher-rfid-core/src/gallagher/: credential.rs  mod.rs
rust/gallagher-rfid-core/src/mifare/: classic.rs  mod.rs
rust/gallagher-rfid-pcsc/: Cargo.toml
rust/gallagher-rfid-pcsc/src/: acr122u.rs  acr122u_card.rs  error.rs  lib.rs  smart_card.rs  smart_card_context.rs  smart_card_reader.rs
rust/gallagher-rfid-pcsc/src/acr122u/: acr122u_card.rs  acr122u_reader.rs  mod.rs
rust/gallagher-rfid-pcsc/src/smart_card/: card.rs  context.rs  error.rs  mod.rs  reader.rs
rust/tapsmith-android/: Cargo.toml
rust/tapsmith-android/src/: lib.rs
rust/tapsmith-cli/: Cargo.toml
rust/tapsmith-cli/src/: desfire_integration.rs  formatter.rs  main.rs
rust/tapsmith-core/: Cargo.toml
rust/tapsmith-core/src/gallagher/: mod.rs
rust/tapsmith-ffi/: Cargo.toml
rust/tapsmith-ffi/include/: tapsmith.h
rust/tapsmith-ffi/src/: lib.rs
rust/tapsmith-jni/: Cargo.toml
rust/tapsmith-jni/src/: lib.rs
rust/tapsmith-pcsc/: Cargo.toml
(+149 files in other folders)
