[workspace]
resolver = "2"
members = [
    "gallagher-rfid-core",
    "gallagher-rfid-pcsc",
    "gallagher-rfid-cli",
]

[workspace.dependencies]
aes = "0.8.4"
heapless = "0.9.3"
pcsc = "2.9.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Author decides which return values warrant #[must_use]; don't auto-warn every fn.
must_use_candidate = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
